IMP IJ2 Table must be contained into its container without display block, fixed sizes, overflow

--- a/front/demo/table.scss
+++ b/front/demo/table.scss
@@ -4,7 +4,4 @@ table.itrocks {
 	--border-color: #800;
 	--border-style: solid;
 	--border-width: 1px;
-
-	max-height: 400px;
-	max-width: 800px;
 }
